--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "algoliasearch": "^4.2.0",
     "electron-is-dev": "^1.2.0",
     "firebase": "^7.13.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-algoliasearch": "^2.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-player": "^2.1.0",
